# python-hello

./: .fpm  README.md  data.json  deps.json  pyproject.toml  python-hello.code-workspace  setup.cfg
.github/workflows/: ci.yaml
examples/: cameraDiscoveryExample.py  cameraServiceExample.py  utils.py
hello/: __init__.py  advertizer.py  api.py  discoverer.py  group.py  receiver.py  scheduler.py  sender.py  service.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_3338be694f50c5f3___init___py.html  z_3338be694f50c5f3_advertizer_py.html  z_3338be694f50c5f3_api_py.html  z_3338be694f50c5f3_discoverer_py.html  z_3338be694f50c5f3_group_py.html  z_3338be694f50c5f3_receiver_py.html  z_3338be694f50c5f3_scheduler_py.html  z_3338be694f50c5f3_sender_py.html  z_3338be694f50c5f3_service_py.html
tests/: abstractSchedulerTest.py  advertizerIntegrationTest.py  apiIntegrationTest.py  defaultAdvertizerTest.py  defaultDiscovererTest.py  defaultScheduledAdvertizerTest.py  defaultSchedulerTest.py  discovererIntegrationTest.py  dishReceiverTest.py  groupTest.py  radioSenderTest.py  receiverIntegrationTest.py  respondingAdvertizerTest.py  scheduledAdvertizerTest.py  scheduledDiscovererTest.py  senderIntegrationTest.py
